Initial commit regarding login

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,12 @@
 <nav class="p-3 navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Forum</a>
     <form class="form-inline">
-        <a class="navbar-text mr-4 " href="">Login</a>
+        {% if user != '' %}
+                <p class="navbar-text mr-4 h6 text-secondary">Hi, {{ user }}!</p>
+                <a class="navbar-text mr-4 h6" href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a class="navbar-text mr-4" href="/accounts/login">Login</a>
+        {% endif %}
         <input class="form-control" type="search" placeholder="Search">
     </form>
 </nav>
@@ -25,15 +30,26 @@
     </div>
 </nav>
 <div class="tab-content" id="nav-tabContent">
+    {% if user != '' %}
+        <a class="m-2 p-2" href="/">New Thread</a>
+    {% endif %}
     {% for s in sections %}
         <div class="tab-pane fade show {% if forloop.counter0 == 0 %} active {% endif %}" id="nav-{{ s.id }}">
             <div class="m-4" id="container-{{ s.id }}">
 
             </div>
-            <button id="load-more-{{ s.id }}" class="btn" type="button">Load more</button>
+            <div class="container">
+              <div class="row">
+                <div class="col text-center">
+                  <button id="load-more-{{ s.id }}" class="btn btn-secondary btn-lg btn-block align-middle" type="button">Load more</button>
+                </div>
+              </div>
+            </div>
         </div>
     {% endfor %}
 </div>
+
+
 <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
