--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,6 @@
     </div>
 </nav>
 <div class="tab-content" id="nav-tabContent">
-    {% if user != '' %}
-        <a class="m-2 p-2" id="new_thread" href="">New Thread</a>
-    {% endif %}
         {% for s in sections %}
             <div class="tab-pane fade show {% if forloop.counter0 == 0 %} active {% endif %}" id="nav-{{ s.id }}">
                 <div class="m-4" id="container-{{ s.id }}">
@@ -40,9 +37,14 @@
                 </div>
                 <div class="container">
                   <div class="row">
-                    <div class="col text-center">
-                      <button id="load-more-{{ s.id }}" class="btn btn-secondary btn-lg btn-block align-middle" type="button">Load more</button>
-                    </div>
+                      <div class="col text-center">
+                        <button id="load-more-{{ s.id }}" class="btn btn-secondary btn-lg btn-block align-middle" type="button">Load more</button>
+                      </div>
+                  {% if user != '' %}
+                      <div class="col text-center">
+                        <button id="new_thread" class="btn btn-secondary btn-lg btn-block align-middle" type="button">New thread</button>
+                      </div>
+                  {% endif %}
                   </div>
                 </div>
             </div>
