--- a/templates/thread_template.html
+++ b/templates/thread_template.html
@@ -2,14 +2,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    {{ post_list }}
+<nav class="p-3 navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Forum</a>
+    <form class="form-inline">
+        {% if user != '' %}
+                <p class="navbar-text mr-4 h6 text-secondary">Hi, {{ user }}!</p>
+                <a class="navbar-text mr-4 h6" href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a class="navbar-text mr-4" href="/accounts/login">Login</a>
+        {% endif %}
+        <input class="form-control" type="search" placeholder="Search">
+    </form>
+</nav>
+<p class="m-2"> <a href="/">Home</a> / <a>{{ post_list.first.thread.section }}</a> / <a>{{ post_list.first.thread }}</a> </p>
 
-    {% for post in post_list %}
-        {{ post.author }}
-    {% endfor %}
+<div class="p-4 m-2 border bg-white border-secondary">
+    <div class="row">
+        <div class="col-2 border-right border-secondary">
+            <p>placeholder for profile image</p>
+        </div>
+        <div class="col">
+            <div class="col text-center p-2">
+                <u>{{ original_poster.thread.title }}</u>
+            </div>
+            <div class="col text-center">
+                By {{ original_poster.author }}
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="p-2 m-2 border bg-white border-secondary mt-4 mb-4">
+        <div class="col">
+            {{ original_poster.text }}
+        </div>
+</div>
+
+{% for post in post_list %}
+    {% if not forloop.first %}
+    <div class="p-2 m-2 border bg-white border-secondary">
+        <div class="row">
+            <div class="col-2 border-right border-secondary">
+                <div class="col">
+                    Placeholder for profile image
+                </div>
+                <div class="col">
+                    <p>{{ post.author }}</p>
+                </div>
+                <div class="col">
+                    <p>Joined on: {{ post.author.date_joined|date:"d/m/Y" }}</p>
+                </div>
+
+            </div>
+            <div class="col">
+                <div class="col text-right border-bottom border-secondary">
+                    <p>Created on: {{ post.created_on|date:"d/m/Y" }}</p>
+                </div>
+                <div class="col">
+                    <p>{{ post.text }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+{% endfor %}
+<script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
