--- a/templates/user.html
+++ b/templates/user.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,14 +19,79 @@
         <input class="form-control" type="search" placeholder="Search">
     </form>
 </nav>
-<p class="m-2"> <a href="/">Home</a> / <a>users</a> / <a>{{ selected_user }}</a> </p>
+<p class="m-2"> <a href="/">Home</a> / <a>Users</a> / <a>{{ username }}</a> </p>
 
-<div class="card-body">
-    {{ selected_user }}
+<div class="card m-4">
+    <div class="card-body">
+        <div class="row">
+            <div class="col">
+                {{ username }}
+            </div>
+            <div class="col">
+                Member since: {{ date_joined }}
+            </div>
+            <div class="w-100"></div>
+            <div class="col">
+                {% if is_staff %}
+                    <span class="badge badge-pill badge-danger">Administrator</span>
+                {% else %}
+                    <span class="badge badge-pill badge-primary">User</span>
+                {% endif %}
+            </div>
+            <div class="col">
+                Last online: {{ last_login }}
+            </div>
+            <div class="w-100"></div>
+            <div class="col">
+
+            </div>
+            <div class="col ">
+                <a class="btn btn-primary float-right" data-toggle="collapse" href="#moreInfo" role="button" aria-expanded="false">
+                    More Information
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="collapse" id="moreInfo">
+        <div class="card-body border">
+            <p>First Name: {{ first_name }}</p>
+            <p>Last Name: {{ last_name }}</p>
+            <p>Post Count: <a href="" data-toggle="modal" data-target="#post_count">{{ post_count }}</a></p>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="post_count" tabindex="-1" role="dialog" aria-labelledby="label" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="label">Last 3 posts by {{ username }}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {% for post in posts %}
+                <div class="card">
+
+                        <div id="card-body border">
+                            <h6 class="card-title">{{ post.thread }}</h6>
+                            <p>{{ post.text }}</p>
+                        </div>
+
+                </div>
+                {% endfor %}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="{% static 'users.js' %}"></script>
 </body>
 </html>
