--- a/templates/User/user.html
+++ b/templates/User/user.html
@@ -1,24 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<nav class="p-3 navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Forum</a>
-    <form class="form-inline">
-        {% if user != '' %}
-                <p class="navbar-text mr-4 h6 text-secondary">Hi, {{ user }}!</p>
-                <a class="navbar-text mr-4 h6" href="{% url 'logout' %}">Logout</a>
-        {% else %}
-            <a class="navbar-text mr-4" href="/accounts/login">Login</a>
-        {% endif %}
-        <input class="form-control" type="search" placeholder="Search">
-    </form>
-</nav>
+{% include "Index/Navigation.html" %}
 <p class="m-2"> <a href="/">Home</a> / <a>Users</a> / <a>{{ username }}</a> </p>
 
 <div class="card m-4">
@@ -73,12 +55,17 @@
             <div class="modal-body">
                 {% for post in posts %}
                 <div class="card">
-
-                        <div id="card-body border">
-                            <h6 class="card-title">{{ post.thread }}</h6>
-                            <p>{{ post.text }}</p>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col m-2">
+                                    <h6 class="card-title">{{ post.thread }}</h6>
+                                </div>
+                                <div class="col m-2">
+                                    <p>Posted on: {{ post.created_on }}</p>
+                                </div>
+                            </div>
+                            <p class="m-2">{{ post.text }}</p>
                         </div>
-
                 </div>
                 {% endfor %}
             </div>
