--- a/templates/ThreadTemplate/DeleteModal.html
+++ b/templates/ThreadTemplate/DeleteModal.html
@@ -1,24 +1,18 @@
 {% block NewReplyModal %}
-    <div class="modal fade" id="replyModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">New Reply</h5>
+                    <h5 class="modal-title">Are you sure you want to delete this post?</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                        <textarea class="form-control" id="post"></textarea>
-                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="post_button">Post</button>
+                    <button type="button" class="btn btn-danger" id="delete_button">Delete</button>
                 </div>
             </div>
         </div>
     </div>
-    <script>
-        var threadId = {{ first_post.thread.pk }};
-    </script>
 {% endblock %}
