--- a/templates/ThreadTemplate/NewReplyModal.html
+++ b/templates/ThreadTemplate/NewReplyModal.html
@@ -9,7 +9,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                        <textarea class="form-control" id="post"></textarea>
+                        <textarea class="form-control" id="newPost"></textarea>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
