--- a/templates/ThreadTemplate/PostList.html
+++ b/templates/ThreadTemplate/PostList.html
@@ -1,6 +1,6 @@
 {% block PostList %}
 {% for post in post_list %}
-    {% if not forloop.first %}
+
     <div class="p-2 m-2 border bg-white border-secondary">
         <div class="row">
             <div class="col-2 border-right border-secondary">
@@ -18,6 +18,9 @@
             <div class="col">
                 <div class="col text-right border-bottom border-secondary">
                     <p>Created on: {{ post.created_on|date:"d/m/Y" }}</p>
+                    {% if post.created_on != post.last_edited_on %}
+                        <p>Edited on: {{ post.last_edited_on|date:"d/m/Y" }}</p>
+                    {% endif %}
                 </div>
                 <div class="col">
                     {{ post.text }}
@@ -27,16 +30,13 @@
         <div class="row">
             <div class="col"></div>
             <div class="col m-1">
-                 {% if user.is_authenticated %}
-                    <button type="button" class="btn btn-info float-right" data-toggle="modal" data-target="#replyModal">Reply</button>
-                {% endif %}
                 {% if user.is_staff or user == post.author %}
-                    <button type="button" class="btn btn-warning float-right">Edit</button>
-                    <button type="button" class="btn btn-danger float-right">Delete</button>
+                    <button type="button" class="btn btn-warning float-right" onclick="window.location='/edit/{{ post.id }}'">Edit</button>
+                    <button type="button" onclick="setDeleteId({{ post.id }})" class="btn btn-danger float-right" data-toggle="modal" data-target="#deleteModal">Delete</button>
                 {% endif %}
             </div>
         </div>
     </div>
-    {% endif %}
+
 {% endfor %}
 {% endblock %}
