--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,19 +3,42 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Forum | Login</title>
+    <title>Auth</title>
 </head>
 <body>
-    <div class="container text-center">
-        <h2>Login</h2>
-        <form method="post">
+<div class="form-group m-5 p-5 card">
+    <div class="card-body">
+        <form method="post" enctype="multipart/form-data" >
+            <h2 class="text-center pb-4">Login</h2>
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Login</button>
+            <div class="row">
+                <div class="col-sm-2 col-form-label">
+                    <label for="{{ form.username.id_for_label }}">Username:</label>
+                </div>
+                <div class="col-sm-10">
+                    {{ form.username }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2 col-form-label">
+                    <label for="{{ form.password.id_for_label }}">Password:</label>
+                </div>
+                <div class="col-sm-10">
+                    {{ form.password }}
+                </div>
+            </div>
+            <button type="submit" class="float-right btn btn-primary">Login</button>
         </form>
+        <button onclick="window.location='/accounts/register'" class="float-right btn btn-warning">Register</button>
+        <button onclick="window.location='/'" class="float-right btn btn-secondary">Cancel</button>
     </div>
+</div>
     <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>
+        $("#id_username").attr('class', 'form-control');
+        $("#id_password").attr('class', 'form-control');
+    </script>
 </body>
 </html>
