--- a/templates/ThreadTemplate/DeleteThreadModal.html
+++ b/templates/ThreadTemplate/DeleteThreadModal.html
@@ -1,16 +1,16 @@
-{% block DeleteModal %}
-    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-hidden="true">
+{% block DeleteThreadModal %}
+    <div class="modal fade" id="deleteThreadModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Are you sure you want to delete this post?</h5>
+                    <h5 class="modal-title">Are you sure you want to delete this thread?</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-danger" id="delete_button">Delete</button>
+                    <button type="button" class="btn btn-danger" id="delete_thread_button">Delete</button>
                 </div>
             </div>
         </div>
