--- a/templates/AdminPanel/AdminPanel.html
+++ b/templates/AdminPanel/AdminPanel.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 {% include "Index/Navigation.html" %}
-<body>
     <div class="card p-2 m-2">
         <div class="card-body">
         <h2 class="text-center pb-2">Logs</h2>
@@ -34,5 +33,8 @@
             </table>
         </div>
     </div>
+<script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
