--- a/templates/ThreadTemplate/ThreadHeader.html
+++ b/templates/ThreadTemplate/ThreadHeader.html
@@ -2,7 +2,7 @@
 <div class="p-4 m-2 border bg-white border-secondary">
     <div class="row">
         <div class="col-2 border-right border-secondary">
-            <p>placeholder for profile image</p>
+            <p>Thread created on: {{ original_poster.created_on }}</p>
         </div>
         <div class="col">
             <div class="col text-center p-2">
