HTML validation error fixes

--- a/templates/AdminPanel/ChangeModal.html
+++ b/templates/AdminPanel/ChangeModal.html
@@ -11,7 +11,7 @@
             <div class="modal-body">
                 <form>
                 <div class="form-group">
-                    <label for="thread_title" class="col-form-label">Usegroups:</label><br>
+                    <label class="col-form-label">Usegroups:</label><br>
                     <input type="checkbox" name="groups" value="Member" checked disabled> Member<br>
                     <input type="checkbox" id="ModeratorCheckbox" name="groups" value="Member"> Moderator<br>
                     <input type="checkbox" id="AdministratorCheckbox" name="groups" value="Member"> Administrator<br>
